--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.1.0",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@tanstack/react-query": "^5.62.10",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
     "html-to-docx": "^1.8.0",
     "html2pdf": "^0.0.11",
@@ -16,14 +23,18 @@
     "jspdf": "^2.5.2",
     "lucide-react": "^0.469.0",
     "next": "15.1.0",
+    "prisma": "^6.1.0",
     "quill": "^2.0.3",
     "quill-to-word": "^1.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-quill": "^2.0.0"
+    "react-quill": "^2.0.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tanstack/eslint-plugin-query": "^5.62.9",
     "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^19",
